packagelon com.twittelonr.simclustelonrs_v2.scorelon

import com.twittelonr.simclustelonrs_v2.scorelon.WelonightelondSumAggrelongatelondScorelonStorelon.WelonightelondSumAggrelongatelondScorelonParamelontelonr
import com.twittelonr.simclustelonrs_v2.thriftscala.{
  elonmbelonddingTypelon,
  GelonnelonricPairScorelonId,
  ModelonlVelonrsion,
  ScorelonIntelonrnalId,
  ScoringAlgorithm,
  SimClustelonrselonmbelonddingId,
  Scorelon => ThriftScorelon,
  ScorelonId => ThriftScorelonId,
  SimClustelonrselonmbelonddingPairScorelonId => ThriftSimClustelonrselonmbelonddingPairScorelonId
}
import com.twittelonr.util.Futurelon

/**
 * A gelonnelonric storelon wrappelonr to aggrelongatelon thelon scorelons of N undelonrlying storelons in a welonightelond fashion.
 *
 */
caselon class WelonightelondSumAggrelongatelondScorelonStorelon(paramelontelonrs: Selonq[WelonightelondSumAggrelongatelondScorelonParamelontelonr])
    elonxtelonnds AggrelongatelondScorelonStorelon {

  ovelonrridelon delonf gelont(k: ThriftScorelonId): Futurelon[Option[ThriftScorelon]] = {
    val undelonrlyingScorelons = paramelontelonrs.map { paramelontelonr =>
      scorelonFacadelonStorelon
        .gelont(ThriftScorelonId(paramelontelonr.scorelonAlgorithm, paramelontelonr.idTransform(k.intelonrnalId)))
        .map(_.map(s => paramelontelonr.scorelonTransform(s.scorelon) * paramelontelonr.welonight))
    }
    Futurelon.collelonct(undelonrlyingScorelons).map { scorelons =>
      if (scorelons.elonxists(_.nonelonmpty)) {
        val nelonwScorelon = scorelons.foldLelonft(0.0) {
          caselon (sum, maybelonScorelon) =>
            sum + maybelonScorelon.gelontOrelonlselon(0.0)
        }
        Somelon(ThriftScorelon(scorelon = nelonwScorelon))
      } elonlselon {
        // Relonturn Nonelon if all of thelon undelonrlying scorelon is Nonelon.
        Nonelon
      }
    }
  }
}

objelonct WelonightelondSumAggrelongatelondScorelonStorelon {

  /**
   * Thelon paramelontelonr of WelonightelondSumAggrelongatelondScorelonStorelon. Crelonatelon 0 to N paramelontelonrs for a WelonightelondSum
   * AggrelongatelondScorelon Storelon. Plelonaselon elonvaluatelon thelon pelonrformancelon belonforelon productionization any nelonw scorelon.
   *
   * @param scorelonAlgorithm thelon undelonrlying scorelon algorithm namelon
   * @param welonight contribution to welonightelond sum of this sub-scorelon
   * @param idTransform transform thelon sourcelon ScorelonIntelonrnalId to undelonrlying scorelon IntelonrnalId.
   * @param scorelonTransform function to apply to sub-scorelon belonforelon adding to welonightelond sum
   */
  caselon class WelonightelondSumAggrelongatelondScorelonParamelontelonr(
    scorelonAlgorithm: ScoringAlgorithm,
    welonight: Doublelon,
    idTransform: ScorelonIntelonrnalId => ScorelonIntelonrnalId,
    scorelonTransform: Doublelon => Doublelon = idelonntityScorelonTransform)

  val SamelonTypelonScorelonIntelonrnalIdTransform: ScorelonIntelonrnalId => ScorelonIntelonrnalId = { id => id }
  val idelonntityScorelonTransform: Doublelon => Doublelon = { scorelon => scorelon }

  // Convelonrt Gelonnelonric Intelonrnal Id to a SimClustelonrselonmbelonddingId
  delonf gelonnelonricPairScorelonIdToSimClustelonrselonmbelonddingPairScorelonId(
    elonmbelonddingTypelon1: elonmbelonddingTypelon,
    elonmbelonddingTypelon2: elonmbelonddingTypelon,
    modelonlVelonrsion: ModelonlVelonrsion
  ): ScorelonIntelonrnalId => ScorelonIntelonrnalId = {
    caselon id: ScorelonIntelonrnalId.GelonnelonricPairScorelonId =>
      ScorelonIntelonrnalId.SimClustelonrselonmbelonddingPairScorelonId(
        ThriftSimClustelonrselonmbelonddingPairScorelonId(
          SimClustelonrselonmbelonddingId(elonmbelonddingTypelon1, modelonlVelonrsion, id.gelonnelonricPairScorelonId.id1),
          SimClustelonrselonmbelonddingId(elonmbelonddingTypelon2, modelonlVelonrsion, id.gelonnelonricPairScorelonId.id2)
        ))
  }

  val simClustelonrselonmbelonddingPairScorelonIdToGelonnelonricPairScorelonId: ScorelonIntelonrnalId => ScorelonIntelonrnalId = {
    caselon ScorelonIntelonrnalId.SimClustelonrselonmbelonddingPairScorelonId(simClustelonrsId) =>
      ScorelonIntelonrnalId.GelonnelonricPairScorelonId(
        GelonnelonricPairScorelonId(simClustelonrsId.id1.intelonrnalId, simClustelonrsId.id2.intelonrnalId))
  }
}
